2009-02-17  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-render-manager.h (STATE_DISCARD_PREVIEW_NOTE):
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_register_client,
	  hd_comp_mgr_map_notify): Discard previews if there is an fullscreen
	  application is shown. Fixes: NB#97230
	
	* debian/changelog: Update.

2009-02-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-task-navigator.c: Modified g_return_if_fail check
	to normal 'if' and comment (return_if_fail does nothing now)

2009-02-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* hd-comp-mgr.c: Added check in restack to detect apps above the
	desktop and switch to app mode.

2009-02-17  Alejandro Pinheiro <apinheiro@igalia.com>

	* configure.ac
	* debian/rules
	* src/main.c
	* src/ally: new directory

	Added a11y support for hildon-desktop. The a11y support is not compiled
	by default. You need to pass --enable-a11y to the configure, ie:
	  * ./autogen.sh --enable-a11y
	  * Add a11y to the DEB_BUILD_OPTIONS when using dpkg-buildpackage

	Fixes NB#93169

2009-02-16  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added D-Bus interface to remotely launch applications.
	For NB#100519

	* src/home/hd-switcher.c: Receive relaunched signal from HdAppMgr.
	* src/launcher/Makefile.am:
	* src/launcher/hd-app-mgr-dbus.xml: Inteface definition for HdAppMgr.
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-app-mgr.h:
	* src/launcher/hd-launcher-tree.c: Added method to find an item by id.
	* src/launcher/hd-launcher-tree.h:
	* src/mb/hd-comp-mgr.c: Create the HdAppMgr before HdSwitcher.

2009-02-16  Gordon Williams <gordon.williams@collabora.co.uk>
	
	NB#99127 - Home Edit Background not blurred
	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher.c:
	Remove back arrow and use HdTitleBar's back button instead	  
	* src/home/hd-title-bar.c:	
	button highlighting for right-hand buttons
	* src/home/hd-render-manager.c